@@ -5,7 +5,7 @@ module Development.Shake.Core(
     ShakeOptions(..), shakeOptions, run,
     Rule(..), Rules, defaultRule, rule, action,
     Action, apply, apply1, traced,
-    putLoud, putNormal, putQuiet,
+    Verbosity(..), getVerbosity, putLoud, putNormal, putQuiet,
     Observed(..)
     ) where
 
@@ -42,7 +42,7 @@ data ShakeOptions = ShakeOptions
     {shakeFiles :: FilePath -- ^ Where shall I store the database and journal files (defaults to @.shake@).
     ,shakeParallel :: Int -- ^ What is the maximum number of rules I should run in parallel (defaults to @1@).
     ,shakeVersion :: Int -- ^ What is the version of your build system, increment to force a complete rebuild.
-    ,shakeVerbosity :: Int -- ^ 1 = normal, 0 = quiet, 2 = loud.
+    ,shakeVerbosity :: Verbosity -- ^ What messages to print out (defaults to 'Normal').
     ,shakeLint :: Bool -- ^ Run under lint mode, when set implies 'shakeParallel' is @1@ (defaults to 'False').
                        --   /This feature has not yet been completed, and should not be used./
     ,shakeDump :: Bool -- ^ Dump all profiling information to @'shakeFiles'.json@ (defaults to 'False').
@@ -51,7 +51,7 @@ data ShakeOptions = ShakeOptions
 
 -- | The default set of 'ShakeOptions'.
 shakeOptions :: ShakeOptions
-shakeOptions = ShakeOptions ".shake" 1 1 1 False False
+shakeOptions = ShakeOptions ".shake" 1 1 Normal False False
 
 
 data ShakeException = ShakeException [Key] SomeException
@@ -64,6 +64,15 @@ instance Show ShakeException where
         "Error when running Shake build system:" :
         map (("* " ++) . show) stack ++
         [show inner]
+
+
+-- | The verbosity data type
+data Verbosity
+    = Silent -- ^ Don't print out any messages
+    | Quiet  -- ^ Only output essential messages (typically errors)
+    | Normal -- ^ Output normal messages (typically errors and warnings)
+    | Loud   -- ^ Output lots of messages (typically errors, warnings and status updates)
+      deriving (Eq,Ord,Bounded,Enum,Show,Read,Typeable)
 
 
 ---------------------------------------------------------------------
@@ -190,7 +199,7 @@ data S = S
     ,stored :: Key -> Value -> IO Bool
     ,execute :: Key -> Action Value
     ,outputLock :: Var ()
-    ,verbosity :: Int
+    ,verbosity :: Verbosity
     ,observer :: Key -> IO () -> IO ()
     -- stack variables
     ,stack :: [Key] -- in reverse
@@ -382,7 +391,7 @@ currentStack = Action $ fmap reverse $ gets stack
 currentRule = Action $ fmap listToMaybe $ gets stack
 -}
 
-putWhen :: (Int -> Bool) -> String -> Action ()
+putWhen :: (Verbosity -> Bool) -> String -> Action ()
 putWhen f msg = Action $ do
     s <- get
     when (f $ verbosity s) $
@@ -394,6 +403,14 @@ putWhen f msg = Action $ do
 --   The output will not be interleaved with any other Shake messages
 --   (other than those generated by system commands).
 putLoud, putNormal, putQuiet :: String -> Action ()
-putLoud = putWhen (>= 2)
-putNormal = putWhen (>= 1)
-putQuiet = putWhen (>= 0)
+putLoud = putWhen (>= Loud)
+putNormal = putWhen (>= Normal)
+putQuiet = putWhen (>= Quiet)
+
+
+-- | Get the current verbosity level, as set by 'shakeVerbosity'. If you
+--   want to output information to the console, you are recommended to use
+--   'putLoud' \/ 'putNormal' \/ 'putQuiet', which ensures multiple messages are
+--   not interleaved.
+getVerbosity :: Action Verbosity
+getVerbosity = Action $ gets verbosity
